--- a/index.html
+++ b/index.html
@@ -2,23 +2,25 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Campus Octayde</title>
+  <title>Campus Octayde Jorge da Silva</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="css/estilo.css">
+  <script src="js/scripts.js" defer></script>
   
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="stylesheet" href="css/estilo.css">
-<script src="js/scripts.js" defer></script>
-
-
 </head>
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container">
       <a class="navbar-brand" href="#">IFMT - Octayde</a>
-      <div class="collapse navbar-collapse">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Campus</a></li>
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="ifmt.html">IFMT</a></li>
+          <li class="nav-item"><a class="nav-link active" href="index.html">Campus</a></li>
           <li class="nav-item"><a class="nav-link" href="curso.html">Curso</a></li>
           <li class="nav-item"><a class="nav-link" href="frameworks.html">Frameworks</a></li>
         </ul>
@@ -26,30 +28,119 @@
     </div>
   </nav>
 
-  <header class="container mt-4">
-    <h1>Conheça o Campus Octayde Jorge da Silva</h1>
-    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="img/imag1.jpg" class="d-block w-100" alt="Foto campus">
+  <div class="container mt-4">
+    <div class="row g-4">
+      <aside class="col-lg-3">
+        <div id="sideCarousel" class="carousel slide side-carousel" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/imag1.jpg" class="d-block" alt="Foto campus 1">
+            </div>
+            <div class="carousel-item">
+              <img src="img/imag2.jpg" class="d-block" alt="Foto campus 2">
+            </div>
+            <div class="carousel-item">
+              <img src="img/imag3.jpg" class="d-block" alt="Foto campus 3">
+            </div>
+            <div class="carousel-item">
+              <img src="img/imag4.webp" class="d-block" alt="Foto campus 4">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#sideCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#sideCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
         </div>
-        <div class="carousel-item">
-          <img src="img/imag2.jpg" class="d-block w-100" alt="Foto campus">
+        <div class="mt-2 text-center">
+          <a href="#historia" class="btn btn-outline-success btn-sm">Saiba mais</a>
         </div>
-        <div class="carousel-item active">
-          <img src="img/imag3.jpg" class="d-block w-100" alt="Foto campus">
+      </aside>
+
+      <main class="col-lg-9">
+        <h1 class="mb-3">Bem‑vindo ao Campus Octayde Jorge da Silva</h1>
+        <p class="lead">Conheça nossa infraestrutura, cursos ofertados e vida acadêmica.</p>
+
+        <hr>
+        <h2>Visão Geral</h2>
+        <p>Localizado estrategicamente em <strong>Cuiabá/MT</strong>, o campus Octayde Jorge da Silva é referência em ensino técnico e superior, com foco em inovação e inclusão social. Fundado em 2010, atende mais de 2&nbsp;000 alunos por semestre.</p>
+
+        <hr>
+        <h2>Instalações Modernas</h2>
+        <ul>
+          <li>Laboratórios de Informática com mais de 200 postos de alta performance.</li>
+          <li>Biblioteca com acervo de 15&nbsp;000 exemplares físicos e acesso a bases digitais.</li>
+          <li>Centro de empreendedorismo e coworking aberto à comunidade.</li>
+          <li>Quadras poliesportivas, ginásio coberto e pista de atletismo.</li>
+        </ul>
+
+        <hr>
+        <h2>Cursos Ofertados</h2>
+        <div class="accordion" id="accordionCursos">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTec">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTec" aria-expanded="true">
+                Técnicos Integrados
+              </button>
+            </h2>
+            <div id="collapseTec" class="accordion-collapse collapse show" data-bs-parent="#accordionCursos">
+              <div class="accordion-body">
+                <ul>
+                  <li>Técnico em Informática</li>
+                  <li>Técnico em Agropecuária</li>
+                  <li>Técnico em Eletrotécnica</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingSup">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSup">
+                Graduações
+              </button>
+            </h2>
+            <div id="collapseSup" class="accordion-collapse collapse" data-bs-parent="#accordionCursos">
+              <div class="accordion-body">
+                <ul>
+                  <li>Sistemas para Internet</li>
+                  <li>Engenharia de Controle e Automação</li>
+                  <li>Licenciatura em Química</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/imag4.webp" class="d-block w-100" alt="Foto campus">
+
+        <hr>
+        <h2>Vida Estudantil</h2>
+        <p>O campus oferece programas de iniciação científica, projetos de extensão e eventos culturais, como a <em>Semana da Tecnologia</em> e o <em>InterIF</em>. 
+          Possui ainda assistência estudantil com bolsas e restaurante universitário.</p>
+
+        <p class="mt-3"><a href="#historia" class="btn btn-success">Conheça a história do campus</a></p>
+
+        <button id="btnToggleMap" class="btn btn-outline-success mb-3">Esconder/Mostrar imagem</button>
+
+        <div id="mapContainer1" class="ratio ratio-1x1 w-100">
+          <img src="img/imag5.jpg" class="img-fluid" alt="Foto campus 3">
         </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
+        <hr>
+        <h2 id="historia">História do Campus</h2>
+        <p>O Campus Octayde Jorge da Silva foi criado com a missão de democratizar o acesso ao ensino técnico e superior no estado de Mato Grosso.
+           Desde a sua fundação, tem se destacado por promover uma educação de excelência, aliando teoria e prática para formar cidadãos críticos e preparados para o mercado de trabalho.
+            Seu nome é uma homenagem ao professor Octayde Jorge da Silva, importante educador e defensor da educação pública e de qualidade. 
+            Com o passar dos anos, o campus expandiu sua estrutura, cursos e parcerias com o setor produtivo, tornando-se referência regional.</p>
+        <hr>
+        <h2>Mapa de Localização</h2>
+        <div class="ratio ratio-4x3"  style="max-width: 250px;">
+          <iframe src="https://www.google.com/maps/search/ifmt+maps/@-15.5811073,-56.1189676,11z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI1MDcwOS4wIKXMDSoASAFQAw%3D%3D" allowfullscreen></iframe>
+        </div>
+      </main>
     </div>
-  </header>
+  </div>
+
+  <footer class="bg-success text-white text-center py-3 mt-4">
+    &copy; 2025 IFMT - Campus Octayde Jorge da Silva
+  </footer>
 </body>
 </html>
