--- a/curso.html
+++ b/curso.html
@@ -4,27 +4,20 @@
   <meta charset="UTF-8">
   <title>Curso Sistemas para Internet</title>
 
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Estilo personalizado -->
   <link rel="stylesheet" href="css/estilo.css">
   <script src="js/scripts.js" defer></script>
 </head>
 <body class="bg-light">
 
-  <!-- Menu -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container">
       <a class="navbar-brand" href="#">IFMT - Curso</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="ifmt.html">IFMT</a></li>
           <li class="nav-item"><a class="nav-link" href="index.html">Campus</a></li>
           <li class="nav-item"><a class="nav-link active" href="curso.html">Curso</a></li>
           <li class="nav-item"><a class="nav-link" href="frameworks.html">Frameworks</a></li>
@@ -33,7 +26,6 @@
     </div>
   </nav>
 
-  <!-- Conteúdo principal -->
   <div class="container mt-4">
     <h1>Curso de Sistemas para Internet</h1>
 
@@ -86,7 +78,7 @@
           </div>
         </div>
       </div>
-      <!-- Adicione mais semestres se desejar -->
+
     </div>
 
     <hr>
